# bcfs-client

./: CMakeLists.txt  bcfs_client.sh
example/: sdk_example.cpp
include/: bcfs_client.h
source/: bcfs_client.cpp  bcfs_local.cpp  bcfs_remote.cpp  sftp_reachbility_manager.cpp  sftp_reachbility_manager.h
